--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "aframe": "0.4.0",
+    "aframe-animation-component": "3.0.4",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
+    "videogular2": "3.2.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
